--- a/calendar.html
+++ b/calendar.html
@@ -7,7 +7,7 @@
         <body>
             
             <div class="topnav">
-                <a class="active" href="login.html">Login</a>
+                <a class="active" href="index.html">Login</a>
                 <a href="home.html">Home</a>
                 <a href="calender.html">Calender</a>
                 <a href="meeting.html">Meeting</a>
