--- a/calendar.html
+++ b/calendar.html
@@ -8,7 +8,7 @@
             
             <div class="topnav">
                 <a class="active" href="signin.html">Login</a>
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="calender.html">Calender</a>
                 <a href="meeting.html">Meeting</a>
                 <link href="calenderTest.html" rel="import" />
