--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="greeting">MEETDULE</div><br>
     <ul>
-        <li><a href = "signin.html">Sign in</a></li>
+        <li><a href = "signing.html">Sign in</a></li>
         <li>Make Account</a></li>
         <li>Apps Support</a></li>
     </ul>
